fix paridispari and add script to palindromo

--- a/Pari-e-Dispari/indexPariDispari.html
+++ b/Pari-e-Dispari/indexPariDispari.html
@@ -9,6 +9,6 @@
 <body>
     
 
-    <script src="script PariDispari/scriptPariDispari.js"></script>
+    <script src="scriptPariDispari/scriptPariDispari.js"></script>
 </body>
 </html>
