--- a/Palindromo/indexPLDRM.html
+++ b/Palindromo/indexPLDRM.html
@@ -9,6 +9,6 @@
 <body>
     
 
-    <script src="script/script.js"></script>
+    <script src="script/scriptPalindromo.js"></script>
 </body>
 </html>
